Fix layout FIx layout issue in StoryListView format modal

--- a/src/story-list/css/storyListView.css
+++ b/src/story-list/css/storyListView.css
@@ -240,6 +240,7 @@
 #formatsModal .tabs button
 {
 	width: 33.3333%;
+	float: left;
 }
 
 #formatsModal .tabContent
